--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-router-dom": "^7.9.6",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
